--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ resolver = "2"
 version = "0.1.0"
 description = "A yew library built for convience and beauty"
 authors = ["Joshua Radin <joshradin@github.com>"]
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
