--- a/crates/textiler-core/Cargo.toml
+++ b/crates/textiler-core/Cargo.toml
@@ -6,12 +6,14 @@ version.workspace = true
 authors.workspace = true
 license.workspace = true
 
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["stylist"]
+stylist = ["dep:stylist"]
 
 [dependencies]
 yew = { version = "0.21.0" }
-stylist = { version = "0.13.0", features = ["yew", "parser", "yew_use_style"] }
+stylist = { version = "0.13.0", features = ["yew", "parser", "yew_use_style"], optional = true }
 once_cell = "1.18.0"
 strum = { version = "0.25.0", features = ["derive"] }
 nom = "7.1.3"
@@ -22,7 +24,7 @@ heck = "0.4.1"
 cssparser = "0.33.0"
 rand = "0.8.5"
 dark-light = "1.0.0"
-web-sys = "0.3.65"
+web-sys = { version = "0.3.65", features = ["HtmlStyleElement"] }
 cfg-if = "1.0.0"
 wasm-bindgen = "0.2.88"
 serde = { version = "1.0.193" }
@@ -31,6 +33,8 @@ regex = "1.10.2"
 log = "0.4.20"
 more_collection_macros = "0.2.2"
 minifier = "0.3.0"
+static_assertions = "1.1.0"
+bigdecimal = { version = "0.4.2", features = ["serde"] }
 
 
 [dev-dependencies]
